# url-shortener

./: .gitignore  LICENSE  alembic.ini  pyproject.toml
app/: main.py
app/core/: exc_handlers.py  exceptions.py  schemas.py
app/core/database/: connection.py  dependencies.py  mixins.py  models.py  repositories.py  settings.py
app/links/: dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  service.py  utils.py
migrations/: env.py
migrations/versions/: 904df92b74c4_create_links_table.py
tests/: conftest.py  test_endpoints.py  test_handlers.py
tests/data/: urls.txt
